# cameraCapture

./: .gitignore  CMakeLists.txt  README.md
include/: aSeeGlassesUserApi.h  aSeeGlassesUserTypes.h  cameraCapture.h  cameraCapture.ui  cornea_calib.h  eyetracking.h  frame.h  glass.h  motion.h  myEvent.h  mygl.h  optimization.h  subwin.h  subwin.ui  threadpool.h  utils.h
src/: cameraCapture.cpp  cornea_calib.cpp  eyetracking.cpp  frame.cpp  glass.cpp  main.cpp  motion.cpp  myEvent.cpp  mygl.cpp  optimization.cpp  subwin.cpp  utils.cpp
